# proof-of-wake

./: README.md
app/: app.json  package-lock.json  package.json  polyfill.js
app/src/app/: index.tsx
app/src/components/: ChallengeCard.tsx  Header.tsx  MathLock.tsx
app/src/constants/: idl.json
app/src/hooks/: useProofOfWake.ts
program/: Anchor.toml  Cargo.toml  Cargo.toml.bak  package-lock.json
program/programs/proof-of-wake/: Cargo.toml
program/programs/proof-of-wake/src/: lib.rs
program/tests/: proof-of-wake.ts
