[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18.18"
hashbrown = "=0.14.5"
indexmap = "=2.2.6"
blake3 = "=1.5.1"
getrandom = "=0.2.15"
jobserver = "=0.1.32"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
indexmap = { path = "/home/ubuntu/.openclaw/workspace/indexmap-pinned" }
blake3 = { path = "/home/ubuntu/.openclaw/workspace/blake3-pinned" }
getrandom = { path = "/home/ubuntu/.openclaw/workspace/getrandom-pinned" }
wit-bindgen = { path = "/home/ubuntu/.openclaw/workspace/wit-bindgen-pinned/crates/guest-rust" }
