[package]
name = "proof-of-wake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_wake"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
jobserver = { workspace = true }
